Assignment 2/src/main/mt22/parser/.antlr/MT22Parser.py
# Generated from d:\University\2022-2023\Semester 2\Principle of Programming Language\Assignment\Assignment 2\src\main\mt22\parser\MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'['", "']'", "'('", "')'", "'{'", "'}'", 
                     "'.'", "','", "';'", "':'", "'='", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'!'", "'&&'", "'||'", "'=='", "'!='", 
                     "'<'", "'<='", "'>'", "'>='", "'::'", "'integer'", 
                     "'float'", "'boolean'", "'string'", "'array'", "'of'", 
                     "'void'", "'auto'", "'inhirit'", "'out'", "'function'", 
                     "'if'", "'else'", "'for'", "'while'", "'do'", "'break'", 
                     "'continue'", "'return'", "'readInteger'", "'printInteger'", 
                     "'readFloat'", "'writeFloat'", "'readBoolean'", "'printBoolean'", 
                     "'readString'", "'printString'", "'super'", "'preventDefault'" ]

    symbolicNames = [ "<INVALID>", "INTLIT", "FLOATLIT", "BOOL", "STRINGLIT", 
                      "LSB", "RSB", "LRB", "RRB", "LCB", "RCB", "DOT", "COMMA", 
                      "SEMI", "COLON", "ASSIGN", "ADDOP", "MINUSOP", "MULOP", 
                      "DIVOP", "MODOP", "NEGAOP", "CONJOP", "DISJOP", "EQUALOP", 
                      "DIFOP", "LESSOP", "LESSEQOP", "GREATOP", "GREATEQOP", 
                      "CONCAT", "INTEGER", "FLOAT", "BOOLEAN", "STRING", 
                      "ARRAY", "OF", "VOID", "AUTO", "INHIRIT", "OUT", "FUNCTION", 
                      "IF", "ELSE", "FOR", "WHILE", "DO", "BREAK", "CONT", 
                      "RT", "READINT", "PRINTINT", "READFLOAT", "WRITEFLOAT", 
                      "READBOOL", "PRINTBOOL", "READSTR", "PRINTSTR", "SUPERS", 
                      "PREVENTDEF", "ID", "BLOCK_COMMENT", "LINE_COMMENT", 
                      "WS", "ERROR_CHAR", "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_var_type = 1
    RULE_vardecl = 2
    RULE_vardecl1 = 3
    RULE_id_list = 4
    RULE_vardecl2 = 5
    RULE_vardecl2_2 = 6
    RULE_vardecl3 = 7
    RULE_vardecl3_2 = 8
    RULE_funcdecl = 9
    RULE_paradecl = 10
    RULE_para_list = 11
    RULE_para = 12
    RULE_stmts_list = 13
    RULE_stmts = 14
    RULE_assign_stmt = 15
    RULE_assign_stmt2 = 16
    RULE_assign_lhs = 17
    RULE_if_stmt = 18
    RULE_for_stmt = 19
    RULE_while_stmt = 20
    RULE_do_stmt = 21
    RULE_bool_expr = 22
    RULE_break_stmt = 23
    RULE_continue_stmt = 24
    RULE_return_stmt = 25
    RULE_call_stmt = 26
    RULE_call_stmt_no_semi = 27
    RULE_call_body = 28
    RULE_call_list = 29
    RULE_block_stmt = 30
    RULE_block_body = 31
    RULE_exp_airth = 32
    RULE_exp_bool = 33
    RULE_exp_str = 34
    RULE_exp_rela = 35
    RULE_exp_ind = 36
    RULE_exp = 37
    RULE_exp1 = 38
    RULE_exp2 = 39
    RULE_exp3 = 40
    RULE_exp4 = 41
    RULE_exp5 = 42
    RULE_exp6 = 43
    RULE_exp7 = 44
    RULE_operands = 45
    RULE_array_type = 46
    RULE_int_list = 47
    RULE_literals = 48
    RULE_array_lit = 49
    RULE_expression_list = 50
    RULE_functions = 51
    RULE_readint_func = 52
    RULE_readfloat_func = 53
    RULE_readbool_func = 54
    RULE_readstr_func = 55
    RULE_printint_func = 56
    RULE_printfloat_func = 57
    RULE_printbool_func = 58
    RULE_printstr_func = 59
    RULE_supers = 60
    RULE_preventdef = 61

    ruleNames =  [ "program", "var_type", "vardecl", "vardecl1", "id_list", 
                   "vardecl2", "vardecl2_2", "vardecl3", "vardecl3_2", "funcdecl", 
                   "paradecl", "para_list", "para", "stmts_list", "stmts", 
                   "assign_stmt", "assign_stmt2", "assign_lhs", "if_stmt", 
                   "for_stmt", "while_stmt", "do_stmt", "bool_expr", "break_stmt", 
                   "continue_stmt", "return_stmt", "call_stmt", "call_stmt_no_semi", 
                   "call_body", "call_list", "block_stmt", "block_body", 
                   "exp_airth", "exp_bool", "exp_str", "exp_rela", "exp_ind", 
                   "exp", "exp1", "exp2", "exp3", "exp4", "exp5", "exp6", 
                   "exp7", "operands", "array_type", "int_list", "literals", 
                   "array_lit", "expression_list", "functions", "readint_func", 
                   "readfloat_func", "readbool_func", "readstr_func", "printint_func", 
                   "printfloat_func", "printbool_func", "printstr_func", 
                   "supers", "preventdef" ]

    EOF = Token.EOF
    INTLIT=1
    FLOATLIT=2
    BOOL=3
    STRINGLIT=4
    LSB=5
    RSB=6
    LRB=7
    RRB=8
    LCB=9
    RCB=10
    DOT=11
    COMMA=12
    SEMI=13
    COLON=14
    ASSIGN=15
    ADDOP=16
    MINUSOP=17
    MULOP=18
    DIVOP=19
    MODOP=20
    NEGAOP=21
    CONJOP=22
    DISJOP=23
    EQUALOP=24
    DIFOP=25
    LESSOP=26
    LESSEQOP=27
    GREATOP=28
    GREATEQOP=29
    CONCAT=30
    INTEGER=31
    FLOAT=32
    BOOLEAN=33
    STRING=34
    ARRAY=35
    OF=36
    VOID=37
    AUTO=38
    INHIRIT=39
    OUT=40
    FUNCTION=41
    IF=42
    ELSE=43
    FOR=44
    WHILE=45
    DO=46
    BREAK=47
    CONT=48
    RT=49
    READINT=50
    PRINTINT=51
    READFLOAT=52
    WRITEFLOAT=53
    READBOOL=54
    PRINTBOOL=55
    READSTR=56
    PRINTSTR=57
    SUPERS=58
    PREVENTDEF=59
    ID=60
    BLOCK_COMMENT=61
    LINE_COMMENT=62
    WS=63
    ERROR_CHAR=64
    UNCLOSE_STRING=65
    ILLEGAL_ESCAPE=66

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def array_lit(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.Array_litContext)
            else:
                return self.getTypedRuleContext(MT22Parser.Array_litContext,i)


        def vardecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.VardeclContext)
            else:
                return self.getTypedRuleContext(MT22Parser.VardeclContext,i)


        def funcdecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.FuncdeclContext)
            else:
                return self.getTypedRuleContext(MT22Parser.FuncdeclContext,i)


        def stmts(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.StmtsContext)
            else:
                return self.getTypedRuleContext(MT22Parser.StmtsContext,i)


        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.ExpContext)
            else:
                return self.getTypedRuleContext(MT22Parser.ExpContext,i)


        def getRuleIndex(self):
            return MT22Parser.RULE_program




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 129
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 124
                    self.array_lit()
                    pass

                elif la_ == 2:
                    self.state = 125
                    self.vardecl()
                    pass

                elif la_ == 3:
                    self.state = 126
                    self.funcdecl()
                    pass

                elif la_ == 4:
                    self.state = 127
                    self.stmts()
                    pass

                elif la_ == 5:
                    self.state = 128
                    self.exp()
                    pass


                self.state = 131 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.INTLIT) | (1 << MT22Parser.FLOATLIT) | (1 << MT22Parser.BOOL) | (1 << MT22Parser.STRINGLIT) | (1 << MT22Parser.LSB) | (1 << MT22Parser.LRB) | (1 << MT22Parser.LCB) | (1 << MT22Parser.COLON) | (1 << MT22Parser.MINUSOP) | (1 << MT22Parser.NEGAOP) | (1 << MT22Parser.VOID) | (1 << MT22Parser.AUTO) | (1 << MT22Parser.IF) | (1 << MT22Parser.FOR) | (1 << MT22Parser.WHILE) | (1 << MT22Parser.DO) | (1 << MT22Parser.BREAK) | (1 << MT22Parser.CONT) | (1 << MT22Parser.RT) | (1 << MT22Parser.READINT) | (1 << MT22Parser.PRINTINT) | (1 << MT22Parser.READFLOAT) | (1 << MT22Parser.WRITEFLOAT) | (1 << MT22Parser.READBOOL) | (1 << MT22Parser.PRINTBOOL) | (1 << MT22Parser.READSTR) | (1 << MT22Parser.PRINTSTR) | (1 << MT22Parser.SUPERS) | (1 << MT22Parser.PREVENTDEF) | (1 << MT22Parser.ID))) != 0)):
                    break

            self.state = 133
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def VOID(self):
            return self.getToken(MT22Parser.VOID, 0)

        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def array_type(self):
            return self.getTypedRuleContext(MT22Parser.Array_typeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_var_type




    def var_type(self):

        localctx = MT22Parser.Var_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_var_type)
        try:
            self.state = 142
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.INTEGER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 135
                self.match(MT22Parser.INTEGER)
                pass
            elif token in [MT22Parser.FLOAT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 136
                self.match(MT22Parser.FLOAT)
                pass
            elif token in [MT22Parser.BOOLEAN]:
                self.enterOuterAlt(localctx, 3)
                self.state = 137
                self.match(MT22Parser.BOOLEAN)
                pass
            elif token in [MT22Parser.STRING]:
                self.enterOuterAlt(localctx, 4)
                self.state = 138
                self.match(MT22Parser.STRING)
                pass
            elif token in [MT22Parser.VOID]:
                self.enterOuterAlt(localctx, 5)
                self.state = 139
                self.match(MT22Parser.VOID)
                pass
            elif token in [MT22Parser.AUTO]:
                self.enterOuterAlt(localctx, 6)
                self.state = 140
                self.match(MT22Parser.AUTO)
                pass
            elif token in [MT22Parser.ARRAY]:
                self.enterOuterAlt(localctx, 7)
                self.state = 141
                self.array_type()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl1(self):
            return self.getTypedRuleContext(MT22Parser.Vardecl1Context,0)


        def vardecl2(self):
            return self.getTypedRuleContext(MT22Parser.Vardecl2Context,0)


        def vardecl3(self):
            return self.getTypedRuleContext(MT22Parser.Vardecl3Context,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl




    def vardecl(self):

        localctx = MT22Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_vardecl)
        try:
            self.state = 147
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 144
                self.vardecl1()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 145
                self.vardecl2()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 146
                self.vardecl3()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vardecl1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_list(self):
            return self.getTypedRuleContext(MT22Parser.Id_listContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def var_type(self):
            return self.getTypedRuleContext(MT22Parser.Var_typeContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl1




    def vardecl1(self):

        localctx = MT22Parser.Vardecl1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vardecl1)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.id_list()
            self.state = 150
            self.match(MT22Parser.COLON)
            self.state = 151
            self.var_type()
            self.state = 152
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.ID)
            else:
                return self.getToken(MT22Parser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def getRuleIndex(self):
            return MT22Parser.RULE_id_list




    def id_list(self):

        localctx = MT22Parser.Id_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_id_list)
        self._la = 0 # Token type
        try:
            self.state = 163
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 154
                self.match(MT22Parser.ID)
                self.state = 159
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MT22Parser.COMMA:
                    self.state = 155
                    self.match(MT22Parser.COMMA)
                    self.state = 156
                    self.match(MT22Parser.ID)
                    self.state = 161
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [MT22Parser.COLON]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vardecl2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def vardecl2_2(self):
            return self.getTypedRuleContext(MT22Parser.Vardecl2_2Context,0)


        def exp(self):
            return self.getTypedRuleContext(MT22Parser.ExpContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl2




    def vardecl2(self):

        localctx = MT22Parser.Vardecl2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_vardecl2)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.match(MT22Parser.ID)
            self.state = 166
            self.vardecl2_2()
            self.state = 167
            self.exp()
            self.state = 168
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vardecl2_2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def vardecl2_2(self):
            return self.getTypedRuleContext(MT22Parser.Vardecl2_2Context,0)


        def exp(self):
            return self.getTypedRuleContext(MT22Parser.ExpContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def var_type(self):
            return self.getTypedRuleContext(MT22Parser.Var_typeContext,0)


        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl2_2




    def vardecl2_2(self):

        localctx = MT22Parser.Vardecl2_2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_vardecl2_2)
        try:
            self.state = 180
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 170
                self.match(MT22Parser.COMMA)
                self.state = 171
                self.match(MT22Parser.ID)
                self.state = 172
                self.vardecl2_2()
                self.state = 173
                self.exp()
                self.state = 174
                self.match(MT22Parser.COMMA)
                pass
            elif token in [MT22Parser.COLON]:
                self.enterOuterAlt(localctx, 2)
                self.state = 176
                self.match(MT22Parser.COLON)
                self.state = 177
                self.var_type()
                self.state = 178
                self.match(MT22Parser.ASSIGN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vardecl3Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def vardecl3_2(self):
            return self.getTypedRuleContext(MT22Parser.Vardecl3_2Context,0)


        def array_type(self):
            return self.getTypedRuleContext(MT22Parser.Array_typeContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl3




    def vardecl3(self):

        localctx = MT22Parser.Vardecl3Context(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_vardecl3)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 182
            self.match(MT22Parser.ID)
            self.state = 183
            self.vardecl3_2()
            self.state = 184
            self.array_type()
            self.state = 185
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vardecl3_2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def vardecl3_2(self):
            return self.getTypedRuleContext(MT22Parser.Vardecl3_2Context,0)


        def array_type(self):
            return self.getTypedRuleContext(MT22Parser.Array_typeContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl3_2




    def vardecl3_2(self):

        localctx = MT22Parser.Vardecl3_2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_vardecl3_2)
        try:
            self.state = 194
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 187
                self.match(MT22Parser.COMMA)
                self.state = 188
                self.match(MT22Parser.ID)
                self.state = 189
                self.vardecl3_2()
                self.state = 190
                self.array_type()
                self.state = 191
                self.match(MT22Parser.COMMA)
                pass
            elif token in [MT22Parser.COLON]:
                self.enterOuterAlt(localctx, 2)
                self.state = 193
                self.match(MT22Parser.COLON)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def FUNCTION(self):
            return self.getToken(MT22Parser.FUNCTION, 0)

        def var_type(self):
            return self.getTypedRuleContext(MT22Parser.Var_typeContext,0)


        def paradecl(self):
            return self.getTypedRuleContext(MT22Parser.ParadeclContext,0)


        def block_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Block_stmtContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_funcdecl




    def funcdecl(self):

        localctx = MT22Parser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_funcdecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 196
            self.match(MT22Parser.ID)
            self.state = 197
            self.match(MT22Parser.COLON)
            self.state = 198
            self.match(MT22Parser.FUNCTION)
            self.state = 199
            self.var_type()
            self.state = 200
            self.paradecl()
            self.state = 201
            self.block_stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParadeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LRB(self):
            return self.getToken(MT22Parser.LRB, 0)

        def para_list(self):
            return self.getTypedRuleContext(MT22Parser.Para_listContext,0)


        def RRB(self):
            return self.getToken(MT22Parser.RRB, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_paradecl




    def paradecl(self):
